--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "rsbuild build",
     "check": "biome check --write",
     "dev": "rsbuild dev --open",
-    "format": "biome format --write",
-    "preview": "rsbuild preview"
+    "format": "biome format --write"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -24,7 +23,6 @@
     "@rsbuild/core": "^1.3.1",
     "@rsbuild/plugin-react": "^1.1.1",
     "@rsbuild/plugin-svgr": "^1.1.1",
-    "@types/postcss-normalize": "^9.0.4",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "typescript": "^5.8.2"
